; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/comedi/drivers/extr_addi_apci_1516.c_apci1516_reset.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/comedi/drivers/extr_addi_apci_1516.c_apci1516_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.comedi_device = type { i64, %struct.apci1516_private*, %struct.apci1516_boardinfo* }
%struct.apci1516_private = type { i32 }
%struct.apci1516_boardinfo = type { i32 }

@APCI1516_DO_REG = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.comedi_device*)* @apci1516_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @apci1516_reset(%struct.comedi_device* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.comedi_device*, align 8
  %4 = alloca %struct.apci1516_boardinfo*, align 8
  %5 = alloca %struct.apci1516_private*, align 8
  store %struct.comedi_device* %0, %struct.comedi_device** %3, align 8
  %6 = load %struct.comedi_device*, %struct.comedi_device** %3, align 8
  %7 = getelementptr inbounds %struct.comedi_device, %struct.comedi_device* %6, i32 0, i32 2
  %8 = load %struct.apci1516_boardinfo*, %struct.apci1516_boardinfo** %7, align 8
  store %struct.apci1516_boardinfo* %8, %struct.apci1516_boardinfo** %4, align 8
  %9 = load %struct.comedi_device*, %struct.comedi_device** %3, align 8
  %10 = getelementptr inbounds %struct.comedi_device, %struct.comedi_device* %9, i32 0, i32 1
  %11 = load %struct.apci1516_private*, %struct.apci1516_private** %10, align 8
  store %struct.apci1516_private* %11, %struct.apci1516_private** %5, align 8
  %12 = load %struct.apci1516_boardinfo*, %struct.apci1516_boardinfo** %4, align 8
  %13 = getelementptr inbounds %struct.apci1516_boardinfo, %struct.apci1516_boardinfo* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %28

17:                                               ; preds = %1
  %18 = load %struct.comedi_device*, %struct.comedi_device** %3, align 8
  %19 = getelementptr inbounds %struct.comedi_device, %struct.comedi_device* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = load i64, i64* @APCI1516_DO_REG, align 8
  %22 = add nsw i64 %20, %21
  %23 = call i32 @outw(i32 0, i64 %22)
  %24 = load %struct.apci1516_private*, %struct.apci1516_private** %5, align 8
  %25 = getelementptr inbounds %struct.apci1516_private, %struct.apci1516_private* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @addi_watchdog_reset(i32 %26)
  store i32 0, i32* %2, align 4
  br label %28

28:                                               ; preds = %17, %16
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local i32 @outw(i32, i64) #1

declare dso_local i32 @addi_watchdog_reset(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
